# solana-syscall-demos

./: README.md  log.md
components/client/: Cargo.toml
components/client/src/: ed25519.rs  invoke.rs  main.rs  pubsub_client.rs  pubsub_client_async.rs  secp256k1.rs  sysprog.rs  system_instruction_examples.rs  system_test.rs  sysvar_printing.rs  sysvar_test.rs  sysvars.rs  util.rs
components/common/: Cargo.toml
components/common/src/: lib.rs  system_instruction_instruction.rs  system_test.rs  sysvar_instruction.rs  sysvar_test.rs
components/program/: Cargo.toml
components/program/src/: ed25519.rs  invoke.rs  lib.rs  secp256k1.rs  sysprog.rs  sysvars.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/program/: Cargo.toml
src/program/src/: lib.rs
