[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
solana-sdk = "1.10.9"
solana-client = "1.10.9"
solana-cli-config = "1.10.9"
log = "0.4.16"
env_logger = "0.9.0"
common = { path = "../common" }
bincode = "1.3.3"
clap = { version = "3.1.12", features = ["derive"] }
