[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
solana-sdk = "1.10.9"
solana-clap-utils = "1.10.9"
solana-client = "1.10.9"
solana-cli-config = "1.10.9"
log = "0.4.16"
env_logger = "0.9.0"
common = { path = "../common" }
bincode = "1.3.3"
clap = { version = "3.1.12", features = ["derive"] }
hex = "0.4.3"
libsecp256k1 = "0.6.0"
rand = "0.7.3"
solana-transaction-status = "1.10.9"
crossbeam-channel = "0.5.1"
tokio = { version = "~1.14.1", features = ["full"] }
solana-account-decoder = "1.8.3"
futures-util = "0.3.17"
ed25519-dalek = "1.0.1"
