[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
hex = "0.4.3"
solana-program = "1.10.9"
common = { path = "../common" }
serde = "1.0.112"
serde_derive = "1.0.103"
libsecp256k1 = { version = "0.7.0", default-features = false }
