[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
solana-sdk = "1.9.8"
solana-client = "1.9.8"
solana-cli-config = "1.9.8"
log = "0.4.14"
program = { path = "../program", features = ["no-entrypoint"] }
env_logger = "0.9.0"
common = { path = "../common" }
